kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-java
  template:
    metadata:
      labels:
        app: hello-java
    spec:
      containers:
        - name: hello-java
          image: hello-java 
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "400Mi"
              cpu: "2"
            requests:
              memory: "200Mi"
              cpu: "100m"
