kustomize/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-java
  name: hello-java
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: hello-java
