kustomize/base/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: webapp-color
  name: webapp-color
spec:
  to:
    kind: Service
    name: webapp-color
  tls:
    termination: edge
